--- a/tesi/sections/2/3.tex
+++ b/tesi/sections/2/3.tex
@@ -13,7 +13,7 @@
         \[ \Delta_0 := \del_1 \del^\dagger_1.\]
     \end{defn}
 
-    One interesting propertiy of the $0$-laplacian, see Appendix \ref{app:C}, is that the dimension of its kernel equals the connected components of the graph.\\
+    One interesting propertiy of the $0$-laplacian, see Appendix \ref{app:C}, is that the dimension of its kernel equals the number of connected components of the graph.\\
     To illustrate some of the properties of graphs we will refer to the graph in Fig. \ref{fig:2:3}.
 
     \begin{figure}[H]
@@ -70,7 +70,7 @@
         Three invariant subspaces emerge from the laplacian, that determine three different laplacians, namely
         \[ \Delta_0 = \Delta_0^\mc{A} \oplus \Delta_0^\mc{B} \oplus \Delta_0^\mc{C}. \]
 
-        Furthermore any of those three blocks has a $1$-dimensional kernel, in fact the dimensional equiations for the laplacians are
+        Furthermore any of those three blocks has a $1$-dimensional kernel, in fact the dimensional equations for the laplacians are
 
         \[dim(ker\Delta_0^\mc{A}) =dimC_0(\mc{A}) - rank
         \begin{pmatrix}
