--- a/tesi/sections/2/4.tex
+++ b/tesi/sections/2/4.tex
@@ -73,7 +73,7 @@ In fact, the laplacian, neglecting the constants, is the hamiltonian of the free
 \begin{proof} 
     First we see that $\Delta e^{ip\cdot x} = \nabla \cdot (ipe^{ip\cdot x}) = -p^2 e^{ip\cdot x}$.
     Then, in a suitable space where the Fourier transform is invertible we have that $f(x') = \int_{\R^n} dp e^{i\scal{x'}{p}}\int_{\R^n} dx e^{-i\scal{x}{p}}f(x)$, 
-    \\where $\int_{\R^n} dp e^{i\scal{x'-x}{p}} = \delta(x-x')$ up to constants that can be reabsorbed in the eigenfunctions, hence the generalized completness relation. \qedhere
+    \\where $\int_{\R^n} dp e^{i\scal{x'-x}{p}} = \delta(x-x')$ up to constants that can be reabsorbed in the eigenfunctions, hence the generalized completness relation (see App. \ref{app:B}). \qedhere
 \end{proof}
 
 In this approach the Fourier transorm is nothing more than a change of generalized basis into the basis of the eigenfunctions of the laplacian.
