--- a/tesi/sections/2/5.tex
+++ b/tesi/sections/2/5.tex
@@ -30,5 +30,12 @@ use the standard Lagrange multipliers theorem.
     which for every row of $\Phi$ is an eigenvalue equation. \qedhere
 \end{proof}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=17cm, height=4cm]{sections/2/eiglap}
+    \caption{A graphical representation of the first laplacian eigenchains.}
+    \label{fig:2:5}
+\end{figure}
+
     
 \end{document}
