--- a/tesi/sections/3.tex
+++ b/tesi/sections/3.tex
@@ -5,9 +5,9 @@
         \label{sec:3:1}
         \subfile{sections/3/1}   
     \end{section}
-    \begin{section}{Group Equivariant Convolution}
-        \subfile{sections/3/2}   
-    \end{section}
+    % \begin{section}{Group Equivariant Convolution}
+    %     \subfile{sections/3/2}   
+    % \end{section}
     \begin{section}{Spectral Convolution}
         \subfile{sections/3/3}   
     \end{section}
