--- a/tesi/sections/3/3.tex
+++ b/tesi/sections/3/3.tex
@@ -1,8 +1,10 @@
 \documentclass[../3.tex]{subfiles}
 \begin{document}
 
+    Another approach that can be used to define a convolution is the spectral convolution with respect to a laplacian operator, in this section
+    we shall see this abstract and general method on graphs.
     In order to construct a convolutional neural network that classifies data defined on a graph we need a definition of convolution on graphs.
-    To do this we recall that in Chapter \ref{ch:2} we saw that the Fourier diagonalizes the convolution. Here we want to define a convolution on graphs
+    To do this we recall that in Chapter \ref{ch:2} we saw that the Fourier tranform diagonalizes the convolution. Here we want to define a convolution on graphs
     based on this fact. First we introduce what we call \ii{graph Fourier transform}.
     
     \begin{defn}
