--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -92,3 +92,12 @@
     note={\url{http://www.deeplearningbook.org}},
     year={2016}
 }
+
+@misc{2021geo,
+      title={Geometric Deep Learning: Grids, Groups, Graphs, Geodesics, and Gauges}, 
+      author={Michael M. Bronstein and Joan Bruna and Taco Cohen and Petar Veličković},
+      year={2021},
+      eprint={2104.13478},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
