--- a/tesi/sections/1.tex
+++ b/tesi/sections/1.tex
@@ -1,6 +1,8 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
+    The essential idea in algebraic topology is to convert problems about topological spaces and continuous functions into
+    problems about algebraic objects and their homomorphisms, this way one hopes to end up with an easier problem to solve. 
     \begin{section}{Simplicial Complexes} 
         \subfile{sections/1/1}    
     \end{section}
