--- a/tesi/sections/3/1.tex
+++ b/tesi/sections/3/1.tex
@@ -1,5 +1,9 @@
 \documentclass[../3.tex]{subfiles}
 \begin{document}
+
+    Convolutional neural networks or CNN's are today one of the most common deep learing architectures, especially successful at processing
+    that has a known grid-like topology. For instance time series, or signals can be sampled in a 1D grid, while images can be thought as a 2D grid.
+    
     In Chapter \ref{ch:2} we defined the convolution of $f:\R^n \to \R$ with $g:\R^n \to \R$ as
     \[ (f * g)(x) = \int_{\R^n} dx' f(x')g(x-x'), \]
     in the literature of convolutional neural networks the function $f$ is called the \ii{input} of the
@@ -13,14 +17,14 @@
     measurement of the spaceship’s position, we need to average several measurements.
     Considering that more recent measurements are more relevant, we will want this average to
     be a weighted average that gives more weight to recent measurements. 
-    We can do this with a weighting function $w:\R \to \R$. If
+    We can do this with a normalized weighting function $w:\R \to \R$. If
     we apply such a weighted average operation at every moment, we obtain a new
     function s providing a smoothed estimate of the position of the spaceship:
     \[ s(t) = \int_\R da \, x(a)w(t-a), \]
     where $w(t-a)$ is the time-shifted weighting function.
     Since the aquisition rate of any measurement apparatus is not infinite, we need to see this convolution as discrete, representing time as a 1D grid,
     \[ s_i = \sum_{j \in \Z} x_j w_{(i-j)}, \]
-    where $w_{(i-j)}$ is still the time-shifted weighting function shifted by an integer.
+    where $w_{(i-j)}$ is still the weighting function shifted by an integer.
     Let us see for a moment $(\Z,+)$ as a group, since by definition it is closed under the addition this convolution is well defined.
     The representation of this convolution is given by an infinite circulant matrix, therefore a restriction of $\Z$
     into a subset $I$ is necessary. But what happens to $(i-j)$ at the boundary of $I$?\\
@@ -28,7 +32,7 @@
     Standard addition is therefore not qualified to be the group operation, yet if $I = \{ 0,\dots,n-1 \}$, we could use
     addition modulo $n$, i.e. 
     \[ s_i = \sum_{j = 0}^{n-1} x_j w_{(i-j) \, \text{mod} \, n},\]
-    which gives a finite circulant matrix as convolution.
+    which can be seen as the product of a finite circulant matrix $C_ij$ with the vector $x_j$.
     This matrix being circulant has an important constraint on the number of independent components, this reflects the compact support of the filter.
     This might look as a pragmatic solution but it also tells us some truth about the symmetries of the task.
     In some cases the classification of a signal, e.g. voice recognition, is independent of the time when the signal was recorded,
