--- a/tesi/sections/3/3.tex
+++ b/tesi/sections/3/3.tex
@@ -32,4 +32,6 @@
             \item Let $g \in S_C$ then $C[g^{-1}(\phi)] = C[\phi]$, since $C[(g \circ g^{-1})(\phi)] = C[(\phi)] = C[g^{-1}(\phi)]$. \qedhere
         \end{enumerate}
     \end{proof}
+
+    It is important to notice that in order to define a symmetry we need to choose a classification, and the symmetries do not only depend on the signal space.
 \end{document}
