--- a/tesi/sections/3/3.tex
+++ b/tesi/sections/3/3.tex
@@ -33,5 +33,14 @@
         \end{enumerate}
     \end{proof}
 
-    It is important to notice that in order to define a symmetry we need to choose a classification, and the symmetries do not only depend on the signal space.
+    It is important to notice that in order to define a symmetry we need to choose a classification, namely there is no a priori symmetry in the data until
+    we specify what we want to do with it.
+
+    In order to deal with groups in an efficient way we need to define what the \ii{generators} of the group are.
+
+    \begin{defn}
+        Let $G$ be a group, and let $S \subset G$, if every element of $G$ can be written as composition of elements of $S$ and their invereses,
+        then the elements of $S$ are called \ii{generators} of the group $G$.
+    \end{defn}
+
 \end{document}
