--- a/tesi/sections/3.tex
+++ b/tesi/sections/3.tex
@@ -8,8 +8,6 @@
     and structure of the physical world. 
     The aim of geometric deep learning is to exploit those regularities to reduce the dimensionality of the problem.
 
-    The two fundamental geometrical principles exploited in geometric deep learning are \ii{symmetry} and \ii{scale separation}.
-
     Exploiting the symmetries of a system to reduce the dimensionality of a problem is a well known 
     technique in physics. It is not absurd to think that symmetries can also be used in deep learning
     to reduce the number of independent parameters to be learnt.
@@ -23,12 +21,12 @@
     \begin{section}{The Space of Signals}
         \subfile{sections/3/2}   
     \end{section}
-    \begin{section}{Symmetry}
+    \begin{section}{Symmetries, Invariance and Equivariance}
         \subfile{sections/3/3}   
     \end{section}
-    \begin{section}{Scale Separation}
-        \subfile{sections/3/4}   
-    \end{section}
+    % \begin{section}{}
+    %     \subfile{sections/3/4}   
+    % \end{section}
     \begin{section}{Spectral Convolution}
         \subfile{sections/3/5}   
     \end{section}
