--- a/tesi/sections/3/3.tex
+++ b/tesi/sections/3/3.tex
@@ -67,7 +67,7 @@
     on which the group acts. A linear group action allows us to associate to an element $g$ of $G$ a $n \times n$ invertible matrix.
 
     \begin{defn}
-        Let $G$ be a group, we define an $n$-dimensional representation of $G$ to be a homomorphism $\rho : G \to GL(n)$\footnote{GL(n) is the group of $n \times n$ invertible matrices}.
+        Let $G$ be a group, we define an $n$-dimensional representation of $G$ to be a homomorphism $\rho : G \to GL(n)$\footnote{GL(n) is the group of $n \times n$ invertible matrices.}.
     \end{defn}
 
     An important role in geometric deep learning is played by the so called \ii{group equivariant} and \ii{group invariant} functions.
