--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -14,7 +14,7 @@
         for all $t \in [0,1]$.
     \end{defn}
 
-    In \autoref{fig:1} can see in blue an example of a convex set: every segment joining two points of the set lies within the set.
+    In figure \ref{fig:1} can see in blue an example of a convex set: every segment joining two points of the set lies within the set.
     The green set is not convex, in fact we see that the segment in the illustration partially lies outside of the set.
 
     \begin{figure}[H]
@@ -138,5 +138,5 @@
         \label{fig:3}
     \end{figure}
 
-    In fact, we can see in \autoref{fig:3} that the intersection property of simplicial complexes is not satisfied.
+    In fact, we can see in figure \ref{fig:3} that the intersection property of simplicial complexes is not satisfied.
 \end{document}
