--- a/tesi/sections/2/1.tex
+++ b/tesi/sections/2/1.tex
@@ -24,7 +24,7 @@
     This led Euler to formulate an abstract approach to the problem that led to its solution, presented to the St. Petersburg
     Academy in 1735.
 
-    In \autoref{ch:1} we presented abstract simplicial complexes, in this chapter we shall discuss in detail
+    In figure \ref{ch:1} we presented abstract simplicial complexes, in this chapter we shall discuss in detail
     $1$-dimensional abstract simplicial complexes and how they are related to graphs. More information
     on graphs can be found in \cite{bondy}.
 
@@ -37,7 +37,7 @@
         of $e$. A graph where the ordering of the ends of an edge is meaningful is said to be a \ii{directed} graph.
     \end{defn}
 
-    Fig. \ref{fig:2:2} represents an undirected graph with four vertices marked in blue and seven edges.
+    Figure \ref{fig:2:2} represents an undirected graph with four vertices marked in blue and seven edges.
 
     \begin{defn}
         Let $\mc{G}$ be an undirected graph, we define the \ii{adjacency matrix} $A$ of $\mc{G}$ as follows,
