--- a/tesi/sections/appendixA/main.tex
+++ b/tesi/sections/appendixA/main.tex
@@ -2,7 +2,7 @@
 \begin{document}
 
     \begin{defn}
-        A \ii{category} $\bb{C}$ consists of three ingerdients:
+        A \ii{category} $\bb{C}$ consists of three ingredients:
         \begin{enumerate}[1.]
             \item a class of \ii{objects} $Obj(\bb{C})$,
             \item sets of \ii{morphisms} $Hom(A,B)$ for every ordered pair $(A,B) \in Obj(\bb{C}) \times Obj(\bb{C})$,
