--- a/tesi/sections/2/3.tex
+++ b/tesi/sections/2/3.tex
@@ -11,10 +11,11 @@
     \begin{defn}
         Let $\mc{G}$ be a graph, we define the \ii{$0$-laplacian} $\Delta_0 : C_0 \to C_0$ by 
         \[ \Delta_0 := \del_1 \del^\dagger_1.\]
+        \label{lapdef}
     \end{defn}
 
-    One interesting propertiy of the $0$-laplacian, see Appendix \ref{app:C}, is that the dimension of its kernel equals the number of connected components of the graph.\\
-    To illustrate some of the properties of graphs we will refer to the graph in Fig. \ref{fig:2:3}.
+    One interesting propertiy of the $0$-laplacian is that the dimension of its kernel equals the number of connected components of the graph.\\
+    To illustrate some of the properties of graphs we will refer to the graph in Fig. \ref{fig:2:3}. This is the Eckmann's theorem for $0$-chains, for a proof see \ref{app:C}.
 
     \begin{figure}[H]
         \begin{minipage}{.5\textwidth}
@@ -116,7 +117,8 @@
         \[ \Delta_1 := \del_1^\dagger \del_1.\]
     \end{defn}
 
-    One intersting property of the $1$-laplacian, see Appendix \ref{app:C}, is that the dimension of its kernel equals the number of independent cycles.
+    One intersting property of the $1$-laplacian is that the dimension of its kernel equals the number of independent cycles.
+    This, instead, is the Eckmann's theorem for $1$-chains.
 
     \begin{exa}
         In fact we can expand $\Delta_1^\mc{A} := \del_1^\dagger\del_1$ the basis $\{\ket{1,2},\ket{2,3},\ket{3,1}\}$ as
