--- a/tesi/sections/appendixC/main.tex
+++ b/tesi/sections/appendixC/main.tex
@@ -55,4 +55,6 @@
         therefore $\ker\Delta_p \subset \ker\del^\dagger_{p+1} \cap \ker\del_p $. Now, since $\ker\Delta_p = \ker\del^\dagger_{p+1} \cap \ker\del_p$, we conclude that 
         $\ker\Delta_p = (\im\del_{p+1}^\dagger)^\perp \cap \ker\del_p \simeq H_p$. \qedhere
     \end{proof}
+
+    We shall refer to this theorem simply by Eckmann's theorem.
 \end{document}
